--- a/socket/front/src/app/socket/socket.component.css
+++ b/socket/front/src/app/socket/socket.component.css
@@ -1,7 +1,8 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       div { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      div input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+      div select { width: 10%; padding: 10px;}
+      div input { border: 0; padding: 10px; width: 80%; }
       div button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
